pkg/ibmvpc/examples/out/analysis_out/iks_config_object_all_vpcs__no_lbAbstract.txt
Endpoint connectivity for VPC ky-test-vpc
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
Public Internet 1.0.0.0-9.255.255.255,11.0.0.0-100.63.255.255,100.128.0.0-126.255.255.255,128.0.0.0-161.25.255.255,161.27.0.0-166.7.255.255,166.12.0.0-169.253.255.255,169.255.0.0-172.15.255.255,172.32.0.0-191.255.255.255,192.0.1.0/24,192.0.3.0-192.88.98.255,192.88.100.0-192.167.255.255,192.169.0.0-198.17.255.255,198.20.0.0-198.51.99.255,198.51.101.0-203.0.112.255,203.0.114.0-223.255.255.255 => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol:  [...]
Public Internet 1.0.0.0-9.255.255.255,11.0.0.0-100.63.255.255,100.128.0.0-126.255.255.255,128.0.0.0-161.25.255.255,161.27.0.0-166.7.255.255,166.12.0.0-169.253.255.255,169.255.0.0-172.15.255.255,172.32.0.0-191.255.255.255,192.0.1.0/24,192.0.3.0-192.88.98.255,192.88.100.0-192.167.255.255,192.169.0.0-198.17.255.255,198.20.0.0-198.51.99.255,198.51.101.0-203.0.112.255,203.0.114.0-223.255.255.255 => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol:  [...]
Public Internet 1.0.0.0-9.255.255.255,11.0.0.0-100.63.255.255,100.128.0.0-126.255.255.255,128.0.0.0-161.25.255.255,161.27.0.0-166.7.255.255,166.12.0.0-169.253.255.255,169.255.0.0-172.15.255.255,172.32.0.0-191.255.255.255,192.0.1.0/24,192.0.3.0-192.88.98.255,192.88.100.0-192.167.255.255,192.169.0.0-198.17.255.255,198.20.0.0-198.51.99.255,198.51.101.0-203.0.112.255,203.0.114.0-223.255.255.255 => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol:  [...]
Public Internet 161.26.0.0/16,166.8.0.0/14 => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
Public Internet 161.26.0.0/16,166.8.0.0/14 => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
Public Internet 161.26.0.0/16,166.8.0.0/14 => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-clusterid:1[192.168.32.5] => iks-clusterid:1[192.168.36.5] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-clusterid:1[192.168.40.5] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.32.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-clusterid:1[192.168.32.5] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-clusterid:1[192.168.40.5] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.36.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-clusterid:1[192.168.32.5] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-clusterid:1[192.168.36.5] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-clusterid:1[192.168.40.5] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP dst-ports: 30000-32767
iks-node[192.168.0.4] => iks-clusterid:1[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.0.4] => iks-clusterid:1[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.0.4] => iks-clusterid:1[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.0.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.0.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.0.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => iks-clusterid:1[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.16.4] => iks-clusterid:1[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.16.4] => iks-clusterid:1[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.16.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.16.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.16.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => iks-clusterid:1[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.20.4] => iks-clusterid:1[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.20.4] => iks-clusterid:1[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.20.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.20.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.20.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => iks-clusterid:1[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.24.4] => iks-clusterid:1[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.24.4] => iks-clusterid:1[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.24.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.24.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.24.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => Public Internet (all ranges) : All Connections
iks-node[192.168.32.4] => iks-clusterid:1[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.32.4] => iks-clusterid:1[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.32.4] => iks-clusterid:1[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.32.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.32.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.32.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => Public Internet (all ranges) : All Connections
iks-node[192.168.36.4] => iks-clusterid:1[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.36.4] => iks-clusterid:1[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.36.4] => iks-clusterid:1[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.36.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.36.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.36.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => iks-clusterid:1[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.4.4] => iks-clusterid:1[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.4.4] => iks-clusterid:1[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.4.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.4.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.4.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => Public Internet (all ranges) : All Connections
iks-node[192.168.40.4] => iks-clusterid:1[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.40.4] => iks-clusterid:1[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.40.4] => iks-clusterid:1[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.40.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.40.4] => iks-node[192.168.8.4] : All Connections
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.40.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => iks-clusterid:1[192.168.32.5] : protocol: TCP,UDP
iks-node[192.168.8.4] => iks-clusterid:1[192.168.36.5] : protocol: TCP,UDP
iks-node[192.168.8.4] => iks-clusterid:1[192.168.40.5] : protocol: TCP,UDP
iks-node[192.168.8.4] => iks-node[192.168.0.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.16.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.20.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.24.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.32.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.36.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.4.4] : All Connections
iks-node[192.168.8.4] => iks-node[192.168.40.4] : All Connections
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] : protocol: TCP,UDP
iks-node[192.168.8.4] => kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] : protocol: TCP,UDP
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.0.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.16.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.20.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.24.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.32.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.36.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.4.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.40.4] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] => iks-node[192.168.8.4] : protocol: TCP,UDP dst-ports: 30000-32767
